--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <h2 style="color: lime;">All Textbooks:</h2>
         <ol style="font-size: x-large; color: lime;">
             <li>
-                <a href="Downloads/Sindhi.zip" download="Sindhi">Download Sindhi Language - All .pdf in one (.zip)</a>
+                <a href="https://github.com/Tsm8542/sindhilang.github.io/releases/download/Downloads/Sindhi.zip" download="Sindhi">Download Sindhi Language - All .pdf in one (.zip)</a>
             </li>
         </ol>
     </div>
